<resources>
    <string name="app_name">ConversorMoedas</string>
    <string name="qual_o_valor_em_real">Qual o valor em real?</string>
    <string name="valor_em_dolar">Valor em Dolar</string>
    <string name="valor_em_euro">Valor em Euro</string>
    <string name="calcular">Calcular</string>
    <string name="informe_valor">Campo em branco! Informa um valor!</string>
    <string name="valor_em_libras">Valor em Libras</string>
</resources>